src/todo.css
@import url('https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap');
* {
  box-sizing: border-box;
  margin: 0;
  word-break: break-all;
  padding: 0;
}
a {
  color: inherit;
  text-decoration: none;
}
body {
  color: black;
  background-image: url(./assets/dark_graph.jpeg);
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 1em;
  font-family: Arial, Helvetica, sans-serif;
}
.star {
  position: fixed;
  padding: 0.3em;
  right: 0;
  color: rgb(103, 163, 216);
  background-color: black;
  top: 0;
  border-bottom-left-radius: 0.5em;
  transition: 1s;
}
.star:hover {
  color: black;
  background-color: rgb(103, 163, 216);
}
button {
  cursor: pointer;
  white-space: nowrap;
}
.todo-block {
  background-position: center;
  width: 24em;
  height: 30em;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: 0.3em 0.3em 0em rgba(69, 99, 124, 0.201);
  border: 1px solid rgba(70, 69, 69, 0.468);
  border-radius: 2px;
  padding: 2em;
  overflow-y: scroll;
}
.fixed {
  display: flex;
  flex-direction: column;
}
.todo-block h2 {
  display: flex;
  align-items: center;
  color: rgb(103, 163, 216);
  font-family: 'Tektur', sans-serif;
  justify-content: center;
  margin-bottom: 1em;
}
li {
  font-size: 1em;
  list-style-type: none;
  width: 100%;
  display: flex;
  align-items: center;
  background-color: aliceblue;
}
.todo-block ul {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.3em;
}
.todo-block form input {
  width: 100%;
  outline: none;
  background-color: aliceblue;
  border: none;
  box-shadow: 0.1em 0.1em 2px rgba(69, 99, 124, 0.486);
  height: 3em;
  border-top-left-radius: 0.5em;
  border-bottom-left-radius: 0.5em;
  padding: 1em;
}
form {
  display: flex;
  align-items: center;
  margin-bottom: 2em;
  width: 100%;
}
form button {
  border: 1px solid rgb(103, 163, 216);
  background-color: white;
  height: 3em;
  border-top-right-radius: 0.5em;
  border-bottom-right-radius: 0.5em;
  transition: 0.2s ease-in;
  padding: 0 0.5em;
  box-shadow: 0.1em 0.1em 2px rgba(69, 99, 124, 0.486);
}
form button:hover {
  background-color: rgb(103, 163, 216);
  border: 1px solid;
  color: white;
}
input[type='checkbox']:checked {
  accent-color: rgb(103, 163, 216);
}
.completed {
  text-decoration: line-through gray;
  color: gray;
}
ul span {
  color: rgb(237, 26, 26);
  font-size: 1em;
  cursor: pointer;
  height: max-content;
}
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  color: white;
  width: 100%;
  left: 0;
  bottom: 0;
  background-color: #808080;
  height: 3em;
  font-size: 1.2em;
}
footer div a {
  color: inherit;
  text-decoration: none;
}
@media (max-width: 750px) {
  .todo-block {
    width: 20em;
    height: 35em;
  }
  .body {
    padding-top: 4em;
  }
  footer {
    font-size: 1em;
  }
}

